# aicontextator

./: .gitignore  LICENSE  README.md  aicontextator.py  context_builder.py  pyproject.toml
src/: aicontextator.py  scripts.py
tests/: test_aicontextator.py  test_context_builder.py
