[project]
name = "aicontextator"
version = "0.1.4"
description = "A smart CLI tool that bundles project files into a single, LLM-ready context string. It respects .gitignore, counts tokens, and handles large projects by splitting the output."
authors = [
    { name = "David Galet", email = "davidgalet@gmail.com" },
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pathspec>=0.12",
    "pyperclip>=1.9.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]

[project.scripts]
aicontextator = "aicontextator:cli"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock"
]